--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
 .container-flex {
     display: flex;
     width: 100%;
+    max-width: 100vw;
     height: 100%;
     
 }
@@ -83,24 +84,21 @@ button {
     color: #0A3871;
     
 }
-.button-copiar {
-    width: 80%;
-    
-}
     
 .container-right {
     box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.2);
     display: flex;
+    justify-content: space-between;
     flex-direction: column;
     width: 30%;
     margin: 2% 2%;
+    padding: 0 20px;
     border-radius: 20px;
-    background-image: url(./img/puppet.png);
+    background-image: url(../img/puppet.png);
     background-size: 90% 50% ;
     background-repeat: no-repeat;
     background-position: 50% 20%;
     align-items: center;
-    justify-content: end;
     font-family: Inter;
     font-size: 24px;
     font-weight: 400;
@@ -111,8 +109,9 @@ button {
 }
 .container-subtitle {
     margin: 0 10%;
-    margin-bottom: 120px;
     text-align: center;
+    margin-top: 580px;
+    margin-bottom: 100px;
 }
 .container-subtitle .subtitle1 {
     font-family: 'Inter';
@@ -129,27 +128,34 @@ button {
     line-height: 150%;
 }
 .container-traduccion-text {
-    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
     margin: 0 10px;
+    justify-content: start;
     word-wrap: break-word;
-    
+    overflow: hidden;
 }
-.buton-copiar {
-    height: 23.7%;
+.container-copiar {
     width: 100%;
+    height: 175px;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 30% 0;
+    
+    
+}
+.buton-copiar {
+    width: 85%;
 }
 .display {
     display: none;
 }
+.fondo {
+    background-image: none;
+}
 
-@media (max-width: 800px){
+@media (max-width: 850px){
     body {
         height: 100%;
     }
